{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 46,
  "lineage": "aece7b4b-b1cc-1bb0-dfa6-38ea72a59f79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020446:internet-gateway/igw-0fc3d03d168a94f70",
            "id": "igw-0fc3d03d168a94f70",
            "owner_id": "787230020446",
            "tags": {
              "Name": "AutoHealing-IGW"
            },
            "tags_all": {
              "Name": "AutoHealing-IGW"
            },
            "vpc_id": "vpc-09728501eb73409fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.auto_healing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020446:route-table/rtb-069aa87e0feb5044f",
            "id": "rtb-069aa87e0feb5044f",
            "owner_id": "787230020446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc3d03d168a94f70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AutoHealing-Public-RT"
            },
            "tags_all": {
              "Name": "AutoHealing-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09728501eb73409fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.auto_healing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9bc9422fb399208",
            "route_table_id": "rtb-069aa87e0feb5044f",
            "subnet_id": "subnet-03a31e13dfde84780"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.auto_healing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020446:security-group/sg-0d61f2d6853f6cb9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d61f2d6853f6cb9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "auto-healing-sg",
            "name_prefix": "",
            "owner_id": "787230020446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09728501eb73409fb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.auto_healing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020446:subnet/subnet-03a31e13dfde84780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a31e13dfde84780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787230020446",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AutoHealing-Public-Subnet"
            },
            "tags_all": {
              "Name": "AutoHealing-Public-Subnet"
            },
            "vpc_id": "vpc-09728501eb73409fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.auto_healing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "auto_healing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787230020446:vpc/vpc-09728501eb73409fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032316119e0c2cb0f",
            "default_route_table_id": "rtb-0c70a1c94385dfe03",
            "default_security_group_id": "sg-010e7ef46baaa26ff",
            "dhcp_options_id": "dopt-0e2ea24cec576ea31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09728501eb73409fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c70a1c94385dfe03",
            "owner_id": "787230020446",
            "tags": {
              "Name": "AutoHealing-VPC",
              "Project": "Chaos-Engineering-SRE"
            },
            "tags_all": {
              "Name": "AutoHealing-VPC",
              "Project": "Chaos-Engineering-SRE"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}